[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "uniskill"
version = "1.0.0"
description = "Universal AI Agent Capability Mesh - Enterprise AI Agent Skill Factory & Production Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "asyncio>=3.4",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "celery>=5.3",
    "python-dotenv>=1.0",
    "tree-sitter>=0.21",
    "litellm>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
security = [
    "bandit>=1.7",
    "safety>=2.3",
]
enterprise = [
    "ldap3>=2.9",
    "saml2>=7.5",
    "openid-connect>=0.1",
]

[project.urls]
Homepage = "https://github.com/lanekingkong/uniskill"
Documentation = "https://github.com/lanekingkong/uniskill/wiki"
Repository = "https://github.com/lanekingkong/uniskill.git"
Issues = "https://github.com/lanekingkong/uniskill/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["uniskill*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
